<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical">

    <EditText
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints=""
        android:focusable="false"
        android:inputType=""
        android:singleLine="true"
        android:text=""
        android:textColor="#f00"
        android:textSize="40sp"
        android:hint="@string/type_something_here"
        tools:targetApi="o" />
    <TableRow android:layout_weight="1">
         <Button
             android:id="@+id/one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="go"
             style="?android:attr/buttonBarButtonStyle"
            android:text="@string/one"
            android:textColor="#f00"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="go"
            android:text="@string/two"
            android:textColor="#f00"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="go"
            android:text="@string/three"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="#f00"
            android:textSize="40sp"/>
    </TableRow>
    <TableRow android:layout_weight="1">
       <Button android:id="@+id/four"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="go"
        android:text="@string/four"
           style="?android:attr/buttonBarButtonStyle"
        android:textColor="#f00"
        android:textSize="40sp"/>
        <Button
            android:id="@+id/five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="go"
            android:text="@string/five"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="#f00"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/six"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="go"
            android:text="@string/six"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="#f00"
            android:textSize="40sp"/>
    </TableRow>
    <TableRow android:layout_weight="1">
       <Button android:id="@+id/seven"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="go"
           style="?android:attr/buttonBarButtonStyle"
        android:text="@string/seven"
        android:textColor="#f00"
        android:textSize="40sp"/>
        <Button
            android:id="@+id/eight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="go"
            android:text="@string/eight"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="#f00"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/nine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="go"
            android:text="@string/nine"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="#f00"
            android:textSize="40sp"/>
    </TableRow>
    <TableRow android:layout_weight="1">
        <Button android:id="@+id/zero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="go"
        android:text="@string/zero"
            style="?android:attr/buttonBarButtonStyle"
        android:textColor="#f00"
        android:textSize="40sp"/>
        <Button
            android:id="@+id/point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="go"
            android:text="@string/point"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="#f00"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="go"
            android:text="@string/add"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="#f00"
            android:textSize="40sp"/>
    </TableRow>
    <TableRow android:layout_weight="1">
        <Button android:id="@+id/sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="go"
        android:text="@string/sub"
            style="?android:attr/buttonBarButtonStyle"
        android:textColor="#f00"
        android:textSize="40sp"/>
        <Button
            android:id="@+id/mul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="go"
            android:text="@string/mul"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="#f00"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="go"
            android:text="@string/div"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="#f00"
            android:textSize="40sp"/>
    </TableRow>
    <TableRow android:layout_weight="1">
        <Button android:id="@+id/equal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="go"
            android:text="@string/equal"
            android:textColor="#f00"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="go"
            android:text="@string/back"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="#f00"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="go"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/clear"
            android:textColor="#f00"
            android:textSize="40sp"
            tools:ignore="InvalidId" />
    </TableRow>
</TableLayout>